fix: improve download button spacing

--- a/src/Views/Form/Themes/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Themes/Sequoia/assets/css/form.scss
@@ -102,6 +102,7 @@ p {
 .download-btn {
 	font-size: 16px;
 	line-height: 20px;
+	margin-top: 38px;
 	padding: 16px 22px !important;
 
 	> i {
